src/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Grammar/Par.y
-----------------------------------------------------------------------------


rule 21 is unused
rule 22 is unused
rule 31 is unused
rule 32 is unused
rule 33 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> '{' ListStmt '}'                          (5)
	ListStmt ->                                        (6)
	ListStmt -> Stmt                                   (7)
	ListStmt -> Stmt ';' ListStmt                      (8)
	Stmt -> 'Let' Type Item                            (9)
	Stmt -> 'Read' Type Ident '=' Expr                 (10)
	Stmt -> Ident '=' Expr                             (11)
	Stmt -> 'return' Expr                              (12)
	Stmt -> 'if' '(' Expr ')' Block                    (13)
	Stmt -> 'eif' '(' Expr ')' Block 'else' Block      (14)
	Stmt -> 'while' '(' Expr ')' Block                 (15)
	Stmt -> 'for' '(' Ident 'in' Expr '...' Expr ')' Block   (16)
	Stmt -> 'Fun' Type Ident '(' ListArgument ')' Block   (17)
	Stmt -> 'Print' '(' ListExpr ')'                   (18)
	Item -> Ident                                      (19)
	Item -> Ident '=' Expr                             (20)
	ListItem -> Item                                   (21)
	ListItem -> Item ',' ListItem                      (22)
	Argument -> Ident                                  (23)
	ListArgument ->                                    (24)
	ListArgument -> Argument                           (25)
	ListArgument -> Argument ',' ListArgument          (26)
	Type -> 'Int'                                      (27)
	Type -> 'String'                                   (28)
	Type -> 'Bool'                                     (29)
	Type -> 'FunT'                                     (30)
	ListType ->                                        (31)
	ListType -> Type                                   (32)
	ListType -> Type ',' ListType                      (33)
	Expr6 -> Ident                                     (34)
	Expr6 -> Integer                                   (35)
	Expr6 -> 'True'                                    (36)
	Expr6 -> 'False'                                   (37)
	Expr6 -> Ident '(' ListExpr ')'                    (38)
	Expr6 -> String                                    (39)
	Expr6 -> '(' Expr ')'                              (40)
	Expr5 -> '-' Expr6                                 (41)
	Expr5 -> '!' Expr6                                 (42)
	Expr5 -> Expr6                                     (43)
	Expr4 -> Expr4 MulOp Expr5                         (44)
	Expr4 -> Expr5                                     (45)
	Expr3 -> Expr3 AddOp Expr4                         (46)
	Expr3 -> Expr4                                     (47)
	Expr2 -> Expr2 RelOp Expr3                         (48)
	Expr2 -> Expr3                                     (49)
	Expr1 -> Expr2 '&&' Expr1                          (50)
	Expr1 -> Expr2                                     (51)
	Expr -> Expr1 '||' Expr                            (52)
	Expr -> Expr1                                      (53)
	ListExpr ->                                        (54)
	ListExpr -> Expr                                   (55)
	ListExpr -> Expr ',' ListExpr                      (56)
	AddOp -> '+'                                       (57)
	AddOp -> '-'                                       (58)
	MulOp -> '*'                                       (59)
	MulOp -> '/'                                       (60)
	MulOp -> '%'                                       (61)
	RelOp -> '<'                                       (62)
	RelOp -> '<='                                      (63)
	RelOp -> '>'                                       (64)
	RelOp -> '>='                                      (65)
	RelOp -> '=='                                      (66)
	RelOp -> '!='                                      (67)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'...'          { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'Bool'         { PT _ (TS _ 20) }
	'False'        { PT _ (TS _ 21) }
	'Fun'          { PT _ (TS _ 22) }
	'FunT'         { PT _ (TS _ 23) }
	'Int'          { PT _ (TS _ 24) }
	'Let'          { PT _ (TS _ 25) }
	'Print'        { PT _ (TS _ 26) }
	'Read'         { PT _ (TS _ 27) }
	'String'       { PT _ (TS _ 28) }
	'True'         { PT _ (TS _ 29) }
	'eif'          { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'in'           { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'while'        { PT _ (TS _ 36) }
	'{'            { PT _ (TS _ 37) }
	'||'           { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	ListStmt        rules 6, 7, 8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
	Item            rules 19, 20
	ListItem        rules 21, 22
	Argument        rule  23
	ListArgument    rules 24, 25, 26
	Type            rules 27, 28, 29, 30
	ListType        rules 31, 32, 33
	Expr6           rules 34, 35, 36, 37, 38, 39, 40
	Expr5           rules 41, 42, 43
	Expr4           rules 44, 45
	Expr3           rules 46, 47
	Expr2           rules 48, 49
	Expr1           rules 50, 51
	Expr            rules 52, 53
	ListExpr        rules 54, 55, 56
	AddOp           rules 57, 58
	MulOp           rules 59, 60, 61
	RelOp           rules 62, 63, 64, 65, 66, 67

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'Fun'          shift, and enter state 7
	'Let'          shift, and enter state 8
	'Print'        shift, and enter state 9
	'Read'         shift, and enter state 10
	'eif'          shift, and enter state 11
	'for'          shift, and enter state 12
	'if'           shift, and enter state 13
	'return'       shift, and enter state 14
	'while'        shift, and enter state 15
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 6

	Ident          goto state 3
	Program        goto state 4
	ListStmt       goto state 5
	Stmt           goto state 6

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'...'          reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'in'           reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	%eof           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr                            (rule 11)

	'='            shift, and enter state 46


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 6

	ListStmt -> Stmt .                                  (rule 7)
	ListStmt -> Stmt . ';' ListStmt                     (rule 8)

	';'            shift, and enter state 45
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 7

	Stmt -> 'Fun' . Type Ident '(' ListArgument ')' Block    (rule 17)

	'Bool'         shift, and enter state 38
	'FunT'         shift, and enter state 39
	'Int'          shift, and enter state 40
	'String'       shift, and enter state 41

	Type           goto state 44

State 8

	Stmt -> 'Let' . Type Item                           (rule 9)

	'Bool'         shift, and enter state 38
	'FunT'         shift, and enter state 39
	'Int'          shift, and enter state 40
	'String'       shift, and enter state 41

	Type           goto state 43

State 9

	Stmt -> 'Print' . '(' ListExpr ')'                  (rule 18)

	'('            shift, and enter state 42


State 10

	Stmt -> 'Read' . Type Ident '=' Expr                (rule 10)

	'Bool'         shift, and enter state 38
	'FunT'         shift, and enter state 39
	'Int'          shift, and enter state 40
	'String'       shift, and enter state 41

	Type           goto state 37

State 11

	Stmt -> 'eif' . '(' Expr ')' Block 'else' Block     (rule 14)

	'('            shift, and enter state 36


State 12

	Stmt -> 'for' . '(' Ident 'in' Expr '...' Expr ')' Block    (rule 16)

	'('            shift, and enter state 35


State 13

	Stmt -> 'if' . '(' Expr ')' Block                   (rule 13)

	'('            shift, and enter state 34


State 14

	Stmt -> 'return' . Expr                             (rule 12)

	'!'            shift, and enter state 27
	'('            shift, and enter state 28
	'-'            shift, and enter state 29
	'False'        shift, and enter state 30
	'True'         shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Expr6          goto state 20
	Expr5          goto state 21
	Expr4          goto state 22
	Expr3          goto state 23
	Expr2          goto state 24
	Expr1          goto state 25
	Expr           goto state 26

State 15

	Stmt -> 'while' . '(' Expr ')' Block                (rule 15)

	'('            shift, and enter state 16


State 16

	Stmt -> 'while' '(' . Expr ')' Block                (rule 15)

	'!'            shift, and enter state 27
	'('            shift, and enter state 28
	'-'            shift, and enter state 29
	'False'        shift, and enter state 30
	'True'         shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Expr6          goto state 20
	Expr5          goto state 21
	Expr4          goto state 22
	Expr3          goto state 23
	Expr2          goto state 24
	Expr1          goto state 25
	Expr           goto state 78

State 17

	Expr6 -> Ident .                                    (rule 34)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 38)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	'('            shift, and enter state 77
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'...'          reduce using rule 34
	'/'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'||'           reduce using rule 34
	'}'            reduce using rule 34
	%eof           reduce using rule 34


State 18

	Expr6 -> Integer .                                  (rule 35)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'...'          reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35
	'}'            reduce using rule 35
	%eof           reduce using rule 35


State 19

	Expr6 -> String .                                   (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'...'          reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39
	'}'            reduce using rule 39
	%eof           reduce using rule 39


State 20

	Expr5 -> Expr6 .                                    (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'...'          reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43
	'}'            reduce using rule 43
	%eof           reduce using rule 43


State 21

	Expr4 -> Expr5 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'...'          reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45
	'}'            reduce using rule 45
	%eof           reduce using rule 45


State 22

	Expr4 -> Expr4 . MulOp Expr5                        (rule 44)
	Expr3 -> Expr4 .                                    (rule 47)

	'!='           reduce using rule 47
	'%'            shift, and enter state 74
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'*'            shift, and enter state 75
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'...'          reduce using rule 47
	'/'            shift, and enter state 76
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47
	'}'            reduce using rule 47
	%eof           reduce using rule 47

	MulOp          goto state 73

State 23

	Expr3 -> Expr3 . AddOp Expr4                        (rule 46)
	Expr2 -> Expr3 .                                    (rule 49)

	'!='           reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'+'            shift, and enter state 71
	','            reduce using rule 49
	'-'            shift, and enter state 72
	'...'          reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49
	'}'            reduce using rule 49
	%eof           reduce using rule 49

	AddOp          goto state 70

State 24

	Expr2 -> Expr2 . RelOp Expr3                        (rule 48)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 50)
	Expr1 -> Expr2 .                                    (rule 51)

	'!='           shift, and enter state 63
	'&&'           shift, and enter state 64
	')'            reduce using rule 51
	','            reduce using rule 51
	'...'          reduce using rule 51
	';'            reduce using rule 51
	'<'            shift, and enter state 65
	'<='           shift, and enter state 66
	'=='           shift, and enter state 67
	'>'            shift, and enter state 68
	'>='           shift, and enter state 69
	'||'           reduce using rule 51
	'}'            reduce using rule 51
	%eof           reduce using rule 51

	RelOp          goto state 62

State 25

	Expr -> Expr1 . '||' Expr                           (rule 52)
	Expr -> Expr1 .                                     (rule 53)

	')'            reduce using rule 53
	','            reduce using rule 53
	'...'          reduce using rule 53
	';'            reduce using rule 53
	'||'           shift, and enter state 61
	'}'            reduce using rule 53
	%eof           reduce using rule 53


State 26

	Stmt -> 'return' Expr .                             (rule 12)

	';'            reduce using rule 12
	'}'            reduce using rule 12
	%eof           reduce using rule 12


State 27

	Expr5 -> '!' . Expr6                                (rule 42)

	'('            shift, and enter state 28
	'False'        shift, and enter state 30
	'True'         shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Expr6          goto state 60

State 28

	Expr6 -> '(' . Expr ')'                             (rule 40)

	'!'            shift, and enter state 27
	'('            shift, and enter state 28
	'-'            shift, and enter state 29
	'False'        shift, and enter state 30
	'True'         shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Expr6          goto state 20
	Expr5          goto state 21
	Expr4          goto state 22
	Expr3          goto state 23
	Expr2          goto state 24
	Expr1          goto state 25
	Expr           goto state 59

State 29

	Expr5 -> '-' . Expr6                                (rule 41)

	'('            shift, and enter state 28
	'False'        shift, and enter state 30
	'True'         shift, and enter state 31
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 32
	L_quoted       shift, and enter state 33

	Ident          goto state 17
	Integer        goto state 18
	String         goto state 19
	Expr6          goto state 58

State 30

	Expr6 -> 'False' .                                  (rule 37)
